Internal data
* BFD-discriminator
* isUp (initial false)

Internal signals
* fail

Input signals
* port-up
* port-down
* bisl-bfd-enable (ISL-FSM)
* bisl-bfd-disable (ISL-FSM)
* FL-ok (worker)
* FL-fail (worker)
* FL-timeout (worker)
* isl-move (ISL-FSM)

Output signals
* bfd-up
* bfd-down
* bfd-kill

@startuml
title BFD port FSM

[*] --> INIT

state initChoice <<choice>>
INIT --> initChoice : history / load persistence-data

initChoice --> IDLE : [BFD-discriminator is empty]
initChoice --> CLEANING : [BFD-discriminator is set]

IDLE --> INSTALLING : bisl-bfd-enable
IDLE -l-> FAIL : port-up

INSTALLING --> UP : port-up
INSTALLING --> CLEANING : FL-fail
INSTALLING --> CLEANING : isl-move
INSTALLING --> FAIL : fail
INSTALLING : enter / allocate BFD-discriminator
INSTALLING : enter / emit BFD-session setup

state cleaningChoice <<choice>>

CLEANING --> cleaningChoice : FL-ok / release BFD-discriminator
CLEANING --> FAIL : FL-fail
CLEANING --> FAIL : FL-timeout
CLEANING : enter / emit BFD-session remove
CLEANING : port-up / set isUp = true
CLEANING : port-down / set isUp = false

cleaningChoice --> IDLE : [not isUp]
cleaningChoice --> WAIT_RELEASE : [isUp]

WAIT_RELEASE --> IDLE : port-down
WAIT_RELEASE : exit : set isUp = false

UP --> DOWN : port-down
UP --> CLEANING : isl-move
UP -> [*] : bisl-bfd-disable / emit bfd-kill
UP : enter / emit bfd-up
UP : enter / set isUp = true

DOWN --> UP : port-up
DOWN --> CLEANING : isl-move
DOWN : enter / emit bfd-down
DOWN : enter / set isUp = false

FAIL -r-> IDLE : port-down

@enduml
